correction in z-index

--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,10 @@
     position: relative;
     box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
     border-radius: 2rem;
+    z-index: 1;
 }
 
-h3{
-    font-size: 2.5rem;
-    color: rgb(0, 0, 0);
-}
+
 .item[v-show="true"] {
     display: block;
 }
@@ -45,7 +43,6 @@ h3{
 
 button{
     width: 100px;
-    z-index: 1;
     height: 80px;
     background: #ee0303;
     color: #fff;
@@ -61,6 +58,7 @@ button.btn_lft{
     position: relative;
     left: 20px;
     bottom: 85px;
+
 }
 
 button.btn_rgt{
